reanem method
